--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
 header, main {
   background-color: #EBCCEC;
   text-align: center;
+  border-radius: 25px;
+  width: 200px;
+  height: 150px;
 }
 
 p {
