--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@ h1 {
 }
 
 header, main {
-  background-color: #EBCCEC;
   text-align: center;
-  border-radius: 25px;
-  width: 200px;
-  height: 150px;
+  border-radius: 500px;
+  width: 700px;
+  height: 700px;
 }
 
 p {
@@ -24,6 +23,7 @@ p {
 
 main {
   font-family: 'Times New Roman'
+  background-color: #ffffff
 }
 
 a {
