--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 {
-  font-family: cursve
+  font-family: cursve;
 }
 
 header, main {
@@ -17,21 +17,21 @@ header, main {
 
 p {
   color: #000000;
-  font-family: 'Times New Roman'
+  font-family: 'Times New Roman';
   margin: 0;
 }
 
 main {
   font-family: 'Times New Roman'
-  background-color: #ffffff
+  background-color: #ffffff;
 }
 
 a {
   color: #000000;
-  text-align: center
+  text-align: center;
 }
 
 footer{
   text-align: center;
-  color: #000000
+  color: #000000;
 }
