--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ h1 {
 header, main {
   text-align: center;
   border-radius: 500px;
-  width: 700px;
-  height: 700px;
+  padding: 50px;
+  width: 500px;
+  height: 150px;
 }
 
 p {
