--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header, main {
   padding: 50px;
   width: 500px;
   height: 150px;
-  background: #EBCCEC;
+  background-color: #EBCCEC;
 }
 
 p {
