--- a/style.css
+++ b/style.css
@@ -47,3 +47,33 @@ footer {
   border-radius: 25px;
   font-family: 'Gills Sans, Sans-Serif';
 }
+
+a:link {
+  color: hotpink; 
+}
+
+a:visited {
+  color: purple;
+}
+
+a:hover {
+  color: orange;
+}
+
+a:active {
+  color: #000000;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
