--- a/style.css
+++ b/style.css
@@ -51,10 +51,13 @@ footer {
 
 a:link {
   color: purple; 
+  background-color: #ffffff
 }
 
 a:visited {
   color: hotpink;
+  padding: 14px 25px;
+  text-align: center; 
 }
 
 a:hover {
